--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Lucky Draw</title>
 
   <base href="/" />
 
@@ -21,6 +21,7 @@
 
 <body>
   <app-root></app-root>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@0.0.3/dist/confetti.browser.min.js"></script>
 </body>
 
 </html>
